Cannot select multiple options by mouse dragging in <select multiple="multiple" size="7"> list https://bugs.webkit.org/show_bug.cgi?id=70496

Patch by Rakesh KN <rakesh.kn@motorola.com> on 2011-11-14
Reviewed by Kent Tamura.

Source/WebCore:

Select Multiple options in a select element with a mouse drag when no. of options
are less than the no. specified in size attribute.
Other browsers(IE, Opera, Firefox) support this feature

Test: fast/forms/select-multiple-elements-with-mouse-drag-with-options-less-than-size.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::listBoxDefaultEventHandler):
Handled mouse move event with Left button pressed. We select the options under mouse
when mouse drag happens and the select element cannot autoscroll.

LayoutTests:

Select Multiple options in a select element with a mouse drag when no. of options
are less than the no. specified in size attribute.
Other browsers(IE, Opera, Firefox) support this feature.

* fast/forms/select-multiple-elements-with-mouse-drag-with-options-less-than-size-expected.txt: Added.
* fast/forms/select-multiple-elements-with-mouse-drag-with-options-less-than-size.html: Added.

Canonical link: https://commits.webkit.org/88668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100111 268f45cc-cd09-0410-ab3c-d52691b4dbfc